src/styles.css
/* ... */
.app-name-title {
    margin: 10px;
}

.header-author a {
    font-size: 18px;
    text-decoration: none;
    color: gray;
}

.theme-toggle-btn {
    background: none;
    border: none;
}

.theme-toggle-btn svg {
    fill: var(--custom-white);
    stroke: var(--custom-white);
}

body.white-mode a {
    color: black;
}

.header-author a:hover {
    text-decoration: underline;
}

#author-logo, #app-logo {
    border-radius: 50%;
}

.sidebar {
    display: flex;
    flex-direction: column;
    grid-area: sidebar;
    height: 100vh;
    max-width: 280px;
    background-color: rgb(30, 30, 30);
    border-right: 0.7px solid var(--borders-white);
    overflow-y: auto;
}

body.white-mode .sidebar {
    background-color: white;
    color: black;
    border-right: 0.7px solid black;
}

.sidebar-title {
    font-family: "Inter-Bold", Arial, Helvetica, sans-serif;
    font-size: 1.3em;
    color: var(--custom-white);
    margin: 0;
    padding: 0px 10px;
}

body.white-mode .sidebar-title {
    color: black;
}

.sidebar-content {
    display: flex;
    flex-direction: column;
    flex: 1;
    padding: 20px;
    gap: 20px;
    max-width: 300px;
    color: lightgray;
}

body.white-mode .sidebar-content {
    color: black;
}

.new-project-dialog {
    position: absolute;
    inset: auto;
    background: rgb(30, 30, 30);
    color: var(--custom-white);
    border: 1px solid rgb(48, 47, 47);
    box-shadow: 0px 4px 8px rgba(146, 143, 143, 0.2);
    padding: 1rem;
    width: 250px;
    border-radius: 8px;
    z-index: 1000;
}

body.white-mode .new-project-dialog {
    background-color: white;
    color: black;
    border: 1px solid black;
}

.new-project-dialog::backdrop {
    background-color: rgba(0, 0, 0, 0.574);
}

.add-project-form {
    display: flex;
    flex-direction: column;
    gap: 8px;
    font-size: 14px;
}

.submit-project-btn, .submit-task-btn {
    padding: 2px 10px;
    background-color: white;
    border: none;
    border-radius: 6px;
    transition: opacity 0.3s;
    width: fit-content;
    font-size: 1rem;
    transition: opacity 0.4s ease;
    font-size: 14px;
}

body.white-mode .submit-project-btn, body.white-mode .submit-task-btn {
    background-color: black;
    color: white;
}

.submit-project-btn:hover, .submit-task-btn:hover {
    opacity: 0.7;
}

.submit-project-btn:focus, .submit-task-btn:focus {
    outline: 2px solid #ccc;
}

body.white-mode .submit-project-btn:focus, body.white-mode .submit-task-btn:focus {
    outline: 2px solid white;
}

.project-modal-title {
    font-family: "Inter-Bold", Arial, Helvetica, sans-serif;
    font-size: 18px;
    margin: 0;
}

.new-task-dialog {
    position: absolute;
    inset: auto;
    background: rgb(30, 30, 30);
    color: var(--custom-white);
    border: 1px solid rgb(48, 47, 47);
    box-shadow: 0px 4px 8px rgba(146, 143, 143, 0.2);
    padding: 1rem;
    border-radius: 8px;
    z-index: 1000;
}

body.white-mode .new-task-dialog {
    background-color: white;
    color: black;
}

.new-task-dialog::backdrop {
    background-color: rgba(0, 0, 0, 0.574);
}

.add-task-form {
    display: flex;
    flex-direction: column;
    gap: 12px;
    font-size: 14px;
}

.task-modal-title {
    font-family: "Inter-Bold", Arial, Helvetica, sans-serif;
    font-size: 18px;
}

.projects-header {
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding-right: 10px;
}

.notes-ul {
    padding: 0;
    text-align: left;
    width: 100%;
    margin: 0;
}

.notes-ul li {
    margin: 8px 0px;
    padding: 4px 10px;
    border-radius: 8px;
    list-style: none;
    font-size: 14px;
    transition: background-color 0.6s ease, transform 0.6s ease;
}

.notes-ul li:hover {
    cursor: pointer;
    background-color: rgba(211, 211, 211, 0.251);
}

.content {
    grid-area: content;
    background-color: rgb(48, 47, 47);
    padding: 20px;
    overflow-y: auto;
    transition: margin-left 0.8s ease-in-out;
}

body.white-mode .content {
    background-color: white;
}

.content h2 {
    color: var(--custom-white);
    font-family: "Special-Font", Arial, Helvetica, sans-serif;
    text-decoration: underline;
}

body.white-mode .content h2 {
    color: black;
}

.title-container {
    display: flex;
    align-items: center;
    justify-content: center;
}

.close-project-dialog-btn, .close-task-dialog-btn {
    position: absolute;
    right: 0;
    top: 0;
    border: none;
    border-radius: 5px;
    padding: 12px;
    background: none;
    font-weight: bolder;
    color: var(--custom-white);
    margin: 0;
    transition: background-color 0.5s ease, font-size 0.5s ease;
}

body.white-mode .close-project-dialog-btn, body.white-mode .close-task-dialog-btn {
    color: black;
}

.close-project-dialog-btn:hover, .close-task-dialog-btn:hover {
    background-color: rgba(169, 169, 169, 0.304);
    font-size: 0.9rem;
}

.close-project-dialog-btn:focus, .close-task-dialog-btn:focus {
    outline: none;
    background-color: #cccccc44;
}

.project-container {
    display: flex;
    align-items: center;
    justify-content: space-between;
    gap: 20px;
    border-radius: 15px;
    padding: 0px 10px;
    transition: background-color 0.6s ease, transform 0.6s ease;
    overflow-y: auto;
}

.project-container:hover {
    background-color: rgba(211, 211, 211, 0.251);
}

.project-container h2 {
    font-size: 16px;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    max-width: 80%;
    display: inline-block;
}

.project-container:hover {
    cursor: pointer;
}

.project-buttons-container {
    display: flex;
    gap: 10px;
    opacity: 0;
    pointer-events: none;
    transition: opacity 0.3s ease-in-out;
}

.project-container:hover .project-buttons-container {
    opacity: 1;
    pointer-events: auto;
}

.project-buttons-container button:hover {
    transform: scale(1.1);
    transition: trasnform 0.2s ease-in-out;
}

.tasks-container {
    display: flex;
    gap: 20px;
    flex-wrap: wrap;
}
/* ... */

